# LakeStream

./: .dockerignore  .env.example  .gitignore  .mcp.json  BUGFIX_CHANGELOG.md  CLAUDE.md  ChampionInternalScraperPRD.md   DEPLOYMENT.md  Dockerfile  Dockerfile.worker  FIRECRAWL_COMPARISON.md  LICENSE  LakeB2B_Intent_Data_Platform_PRD_v3.docx  LakeB2B_Scraper_PRD_v2_Mobile_WebApp.docx  LakeStream_Scrapling_Integration_PRD.md  Makefile  PRD-Scraper-Integration.md  PRODUCT_ROADMAP.md  Procfile  README.md  TODO.md  claude_mcp_config.json  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  nixpacks.toml  plan.md  pyproject.toml  railway.json  requirements.txt  scrapling_integration_plan.md.resolved  start.sh
.gemini/: GEMINI.md
.github/workflows/: ci.yml
.playwright-cli/: page-2026-03-07T00-29-08-437Z.yml
benchmarks/: lake_benchmark.py  scrapling_benchmark.py
docs/: API.md  DEPLOYMENT_GUIDE.md  SOP.md  debugging-with-playwright-cli.md
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: apollo.js  auto-detect.js  linkedin-sales-nav.js
extension/popup/: popup.html  popup.js
scripts/: qa_production_validation.py  test_3_tier_architecture.py  test_local.py  test_local_full.sh  test_local_setup.py
src/: mcp_server.py  server.py
src/api/: router.py
src/cli/: app.py  client.py  config.py  output.py
src/config/: constants.py  settings.py
src/data/: industries.py  job_functions.py  signal_types.py  tech_signatures.py
src/db/: migrate.py  pool.py  seed.py
src/models/: api.py  auth.py  (+10 more)
tests/: conftest.py
(+191 files in other folders)
