[project]
name = "lakestream"
version = "0.1.0"
description = "LakeStream — B2B web scraping and data extraction platform by Lake B2B"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "arq>=0.26.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "playwright>=1.49.0",
    "markdownify>=0.13.1",
    "httpx>=0.28.0",
    "selectolax>=0.3.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
